--- a/function.html
+++ b/function.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <h1 id="heading" onclick="changeText()">JavaScript</h1>
+    <h1 id="heading" onclick="changeText()">JavaScript Project</h1>
     <p id="addition"></p>
 
     <script>
